syntax = "proto3";

package yandex.cloud.events.compute;

import "google/rpc/status.proto";
import "google/protobuf/field_mask.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/events/options.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/compute;compute";
option java_package = "yandex.cloud.api.events.compute";

message CreateFilesystem {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];

  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
    CANCELLED = 4;
  }

  message EventDetails {
    // Request + Response
    string filesystem_id = 1 [(required) = true];
    string filesystem_name = 2;

    string type_id = 3;
    string zone_id = 4;

    int64 size = 5;
    int64 block_size = 6;
  }
}

message UpdateFilesystem {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];

  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }

  message EventDetails {
    // Request + Response
    string filesystem_id = 1 [(required) = true];
    string filesystem_name = 2;
    int64 size = 4;

    // Request
    google.protobuf.FieldMask update_mask = 3;
  }
}

message DeleteFilesystem {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];

  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }

  message EventDetails {
    // Request + Response
    string filesystem_id = 1 [(required) = true];
    string filesystem_name = 2;
  }
}
