syntax = "proto3";

package images;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/images/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateImageFromURLRequest {
    string SrcURL = 1;
    string Format = 2;
    string DstImageId = 3;
    string FolderId = 4;
    repeated types.DiskPool DiskPools = 5;
    string OperationCloudId = 6;
    string OperationFolderId = 7;
    bool UseDataplaneTasks = 8;
    bool UseDataplaneTasksQCOW2Only = 9;
    bool UseS3 = 10;
}

message CreateImageFromURLTaskState {
    CreateImageFromURLRequest Request = 1;
    int64 Offset = 2;
    double Progress = 3;
    int64 ImageSize = 4;
    int64 ImageStorageSize = 5;
    string DataplaneTaskID = 6;
    optional bool IsQCOW2URL = 7;
}
