syntax = "proto3";

package placementgroup;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/placementgroup/protos";

////////////////////////////////////////////////////////////////////////////////

message CreatePlacementGroupRequest {
    string ZoneId = 1;
    string GroupId = 2;
    types.PlacementStrategy PlacementStrategy = 3;
}

message CreatePlacementGroupTaskState {
    CreatePlacementGroupRequest Request = 1;
}

